# omnity-interoperability

./: .gitignore  Cargo.toml  Dockerfile  README.md  balance.txt  balance2.txt  bitcoin_customs.wasm  build_script.sh  canister_ids.json  cloudbuild.yaml  consumption.txt  dfx.json  ic-icrc1-ledger.wasm  instructions.txt  ledger-canister.wasm  local.sh  local1.sh  rust-toochain.toml
customs/bitcoin/: BUILD.bazel  Cargo.toml  bitcoin_custom.did  bitcoin_customs.did  build.rs
customs/bitcoin/src/: address.rs  dashboard.rs  destination.rs  guard.rs  hub.rs  lib.rs  main.rs  management.rs  memo.rs  metrics.rs  queries.rs  runestone.rs  state.rs  tasks.rs  tests.rs  tx.rs  updates.rs
customs/bitcoin/tests/: tests.rs
customs/bitcoin_runes/: Cargo.toml  bitcoin_customs.did  build.rs
customs/bitcoin_runes/src/: address.rs  call_error.rs  destination.rs  guard.rs  hub.rs  lib.rs  lifecycle.rs  main.rs  management.rs  metrics.rs  queries.rs  runestone.rs  state.rs  storage.rs  tests.rs  updates.rs
customs/bitcoin_runes/tests/: tests.rs
customs/brc20/: Cargo.toml  bitcoin_customs.did  brc20_customs.did
customs/brc20/brc20/: Cargo.toml
customs/brc20/brc20_indexer/: Cargo.toml
customs/brc20/src/: bitcoin_to_custom.rs  call_error.rs  custom_to_bitcoin.rs  generate_ticket.rs  hub.rs  hub_to_custom.rs  lib.rs  management.rs  psbt.rs  service.rs  stable_memory.rs  state.rs  tasks.rs  types.rs
customs/doge/: Cargo.toml  doge_customs.did
customs/doge/src/: bitcoin_to_custom.rs  call_error.rs  custom_to_bitcoin.rs  custom_to_dogecoin.rs  dogeoin_to_custom.rs  errors.rs  generate_ticket.rs  hub.rs  hub_to_custom.rs  lib.rs  management.rs  service.rs  stable_memory.rs  state.rs  tasks.rs  types.rs
customs/icp/: Cargo.toml  icp_customs.did
customs/icp/script/: generate_ticket.sh
customs/icp/src/: call_error.rs  hub.rs  lib.rs  main.rs  service.rs  state.rs  updates.rs  utils.rs
customs/oracle_canister/: Cargo.toml
customs/oracle_canister/src/: lib.rs  oracle.rs  types.rs
customs/runes_oracle/: Cargo.toml
customs/runes_oracle/src/: client.rs  customs.rs  executor.rs  indexer.rs  lib.rs  main.rs  tx.rs
customs/solana/: Cargo.toml  solana_customs.did
customs/solana/src/: address.rs  call_error.rs  guard.rs  hub.rs  lib.rs  lifecycle.rs  management.rs  memory.rs  migration.rs  port_native.rs  service.rs  solana_rpc.rs  state.rs  transaction.rs  types.rs  updates.rs
hub/: Cargo.toml  README.md  omnity_hub.did
hub/src/: auth.rs  errors.rs  event.rs  lib.rs  lifecycle.rs  memory.rs  metrics.rs  migration.rs  proposal.rs  self_help.rs  service.rs  signer.rs  state.rs  types.rs  util.rs  utils.rs
hub/src/lifecycle/: init.rs  upgrade.rs
hub/tests/: integration_test.rs
hub/tests/common/: mod.rs
mock/bitcoin/: Cargo.toml  bitcoin_mock.did
mock/bitcoin/src/: lib.rs  main.rs  types.rs
mock/hub/: Cargo.toml  hub_mock.did
mock/hub/src/: main.rs
near_route/: Cargo.toml
near_route/src/: lib.rs  lightclient.rs
proxy/cosmwasm/: Cargo.toml  README.md  cosmwasm_proxy.did
proxy/cosmwasm/src/: errors.rs  guard.rs  lib.rs  service.rs  state.rs  types.rs  utils.rs
proxy/generic_proxy/: Cargo.toml  generic_proxy.did
proxy/generic_proxy/src/: errors.rs  guard.rs  lib.rs  lifecycle.rs  service.rs  state.rs  types.rs
route/bitfinity/: Cargo.toml  bitfinity_route.did
route/bitfinity/src/: audit.rs  contract_types.rs  contracts.rs  convert.rs  eth_common.rs  evm_scan.rs  guard.rs  hub.rs  hub_to_route.rs  lib.rs  log_converter.rs  logs.rs  route_to_evm.rs  service.rs  stable_memory.rs  state.rs  state_provider.rs  types.rs  upgrade.rs
route/common/: Cargo.toml
route/common/src/: directives.rs  error.rs  lib.rs  route.rs
route/cosmoswasm/: Cargo.toml  cosmoswasm_route.did  cosmoswasm_route.wasm  schnorr_canister.wasm  test.sh
route/cosmoswasm/src/: business.rs  constants.rs  cw.rs  error.rs  hub.rs  lib.rs  lifecycle.rs  main.rs  memory.rs  schnorr.rs  service.rs  state.rs  update.rs  utils.rs
route/cosmoswasm/tests/: pocket.rs  tests.rs
route/ethereum/: Cargo.toml  ethereum_route.did
route/ethereum/src/: eth_common.rs  evm_scan.rs  guard.rs  hub_to_route.rs  lib.rs  route_to_evm.rs  service.rs  stable_memory.rs  state.rs  state_provider.rs
route/ethereum_common/: Cargo.toml
route/ethereum_common/src/: address.rs  base_types.rs  const_args.rs  contracts.rs  convert.rs  error.rs  evm_log.rs  lib.rs  signs.rs  stable_memory.rs  token_resp.rs  tx_types.rs
route/ethl2/: Cargo.toml
route/ethl2/src/: lib.rs  redeem.rs  transport.rs  tx.rs  types.rs
route/evm/: Cargo.toml  canister_ids.json  dfx.json  evm_route.did  local.sh  local_evm_test.sh  local_omnity.sh
route/evm/src/: audit.rs  contract_types.rs  contracts.rs  eth_common.rs  evm_scan.rs  guard.rs  hub.rs  hub_to_route.rs  ic_log.rs  lib.rs  route_to_evm.rs  service.rs  stable_log.rs  stable_memory.rs  state.rs  types.rs  updates.rs  upgrade.rs
route/icp/: Cargo.toml  README.md  ic-icrc1-ledger.wasm  icp_route.did
route/icp/src/: call_error.rs  guard.rs  hub.rs  legacy.rs  lib.rs  lifecycle.rs  main.rs  manage_icrc_canister.rs  manage_ledger.rs  memory.rs  state.rs  storage.rs  tasks.rs  updates.rs  util.rs
route/icp/tests/: tests.rs
route/near/: Cargo.toml  README.md
route/near/src/: lib.rs  lightclient.rs  registry.rs  rpc.rs
route/solana/: Cargo.toml  Makefile  README.md  block_hash_summary_report.md  canister_ids.json  dfx.json  rpc_summary_report.md  rpc_summary_report1.md  rpc_summary_report2.md  rpc_summary_report3.md  solana_route.did  summary_report.md
route/solana/assets/: encoded_tx.json  ic-solana-provider.did  ic-solana-rpc.did  omnity_hub.did  parsed_burn_with_memo_tx.json  rich.json  rich2.json  (+9 more)
route/sui/: Cargo.toml  Makefile  canister_ids.json  dfx.json
route/tendermint/: Cargo.toml  tendermint_route_canister.did
route/ton/: Cargo.toml  ton_route.did
tendermint_route/: Cargo.toml  README.md
tendermint_route/src/: rpc.rs
types/: Cargo.toml
types/src/: brc20.rs  guard.rs  hub.rs  hub_types.rs  ic_log.rs  lib.rs  log.rs  rune_id.rs  signer.rs
(+536 files in other folders)
