[workspace]
members = [
    "near_route",
    "tendermint_route",
    "customs/bitcoin",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
candid = { version = "0.10.2" }
candid_parser = { version = "0.1.2" }
ciborium = "0.2.1"
ic-btc-interface = { git = "https://github.com/dfinity/bitcoin-canister", rev = "9b239d1d67253eb14a35be6061e3967d5ec9db9d" }
ic-cdk = "0.12.0"
ic-cdk-macros = "0.8.3"
ic-stable-structures = "0.5.4"
minicbor = { version = "0.19.1", features = ["alloc", "derive"] }
minicbor-derive = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = { version = "1.0.107", features = ["std"] }
simple_asn1 = "0.6.2"
