[workspace]
members = ["near_route", "tendermint_route", "types", "hub"]
resolver = "2"


[workspace.dependencies]
candid = "0.9"
ic-cdk = "0.11"
thiserror = "1"
log = "0.4"
hex = "0.4.3"
sha2 = "0.10.6"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.1.0", features = ["json"] }

prost = { version = "0.12", default-features = false }
derive_more = { version = "0.99.17", default-features = false, features = [
    "from",
    "into",
    "display",
    "try_into",
] }

# log deps
ic-log = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-log", tag = "v0.5.x" }
ciborium = "0.2.1"
ic-stable-structures = "0.6"
lazy_static = "1.4.0"
