[workspace]
members = [
    "types",
    "hub",
    "route/near",
    "route/icp",
    "route/bitfinity",
    "customs/bitcoin",
    "customs/runes_oracle",
    "customs/oracle_canister",
    "mock/bitcoin",
    "mock/icp",
    "mock/hub",
    "customs/icp",
    "proxy/cosmwasm",
    "customs/brc20",
    "customs/brc20_indexer",
]
resolver = "2"

[workspace.package]
edition = "2021"

[profile.release]
# Add debug information to the release build (does NOT reduce the level of optimization!)
# Makes flamegraphs more readable.
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-profile-sections
debug = true
lto = true
opt-level = 'z'

[profile.canister-release]
inherits = "release"
debug = false


[workspace.dependencies]
bigdecimal = {version = "0.4.5"}
candid = { version = "0.10" }
candid_parser = { version = "0.1.2" }
ciborium = "0.2.1"
ic-btc-interface = { git = "https://github.com/dfinity/bitcoin-canister", rev = "9b239d1d67253eb14a35be6061e3967d5ec9db9d" }
ic-cdk = "0.12.2"
ic-cdk-macros = "0.8.3"
ic-ledger-types = "0.9.0"
minicbor = { version = "0.19.1", features = ["alloc", "derive"] }
minicbor-derive = "0.13.0"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = { version = "1", features = ["std"] }
simple_asn1 = "0.6.2"
thiserror = "1"
log = "0.4"
hex = "0.4.3"
sha2 = "0.10.6"
serde_with = { version = "3.1.0", features = ["json"] }
derive_more = { version = "0.99.17", default-features = false, features = [
    "from",
    "into",
    "display",
    "try_into",
] }

# log deps
# ic-log = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-log", tag = "v0.12.x" }
ic-stable-structures = "0.6"
lazy_static = "1.4.0"
anyhow = "1.0.80"
