[package]
name = "omnity-hub"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
k256 = { version = "0.12.0", features = ["ecdsa"] }
# Enable `custom` feature of k256's getrandom dependency. See lib.rs for more details.
getrandom = { version = "0.2", features = ["custom"] }


derive_more = { workspace = true }

# log deps
# ic-log = { workspace = true }
ciborium = { workspace = true }
ic-stable-structures = { workspace = true }
lazy_static = { workspace = true }

omnity-types = { path = "../types" }
[dev-dependencies.tokio]
version = "1.35.1"
features = ["full"]
