[package]
name = "omnity_hub"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "omnity_hub"
path = "src/service.rs"

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
derive_more = { workspace = true }


k256 = { version = "0.12.0", features = ["ecdsa"] }

# Enable `custom` feature of k256's getrandom dependency. See lib.rs for more details.
getrandom = { version = "0.2", features = ["custom"] }

# log deps
ic-log = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-log", tag = "v0.12.x" }

ciborium = { workspace = true }
ic-stable-structures = { workspace = true }
lazy_static = { workspace = true }
omnity_types = { path = "../types" }


[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"] }
rust-crypto = "0.2"
uuid = { version = "1.7.0", features = ["v4"] }
escargot = { version = "0.5.7", features = ["print"] }
assert_fs = "1.1.1"
cargo_metadata = "0.14.2"
ic-state-machine-tests = { git = "https://github.com/dfinity/ic", package = "ic-state-machine-tests", tag = "release-2024-03-06_23-01+p2p" }
ic-test-utilities-load-wasm = { git = "https://github.com/dfinity/ic", package = "ic-test-utilities-load-wasm", tag = "release-2024-03-06_23-01+p2p" }
ic-base-types = { git = "https://github.com/dfinity/ic", package = "ic-base-types", tag = "release-2024-03-06_23-01+p2p" }
env_logger = "0.9"
# log = "0.4"
