[package]
name = "near_route_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8"
ic-cdk = "0.7"
ic-cdk-timers = "0.1"
thiserror = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false }
serde = { version = "1", default-features = false }
