[package]
name = "omnity_types"
version = "0.1.0"
edition = "2021"

[features]
default = ["ic-log"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
derive_more = { workspace = true }

ciborium = { workspace = true }
lazy_static = { workspace = true }
ic-stable-structures = { workspace = true }


k256 = { version = "0.12.0", features = ["ecdsa"] }
# Enable `custom` feature of k256's getrandom dependency. See lib.rs for more details.
getrandom = { version = "0.2", features = ["custom"] }
# log deps
# ic-log = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-log", tag = "v0.12.x" }
ic-log = { git = "https://github.com/octopus-network/canister-sdk.git", branch = "v0.12.x-stablelog", optional = true }
humantime = "2.1"
ic-canisters-http-types = { git = "https://github.com/dfinity/ic", tag = "release-2024-03-06_23-01+p2p" }

[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"] }
rand = "0.8.4"
