[package]
name = "bitcoin_customs"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "bitcoin_customs"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.53"
bech32 = "0.9.0"
bs58 = "0.4.0"
bitcoin = "0.28.1"
candid = { workspace = true }
ciborium = { workspace = true }
hex = "0.4.3"
ic0 = "0.18.9"
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "7f6e7df37690a4256066a6bc0a55c8eb595f7755" }
ic-btc-interface = { workspace = true }
ic-canisters-http-types = { git = "https://github.com/dfinity/ic", rev = "7f6e7df37690a4256066a6bc0a55c8eb595f7755" }
ic-canister-log = { git = "https://github.com/dfinity/ic", rev = "7f6e7df37690a4256066a6bc0a55c8eb595f7755" }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-crypto-extended-bip32 = { git = "https://github.com/dfinity/ic", rev = "7f6e7df37690a4256066a6bc0a55c8eb595f7755" }
ic-crypto-getrandom-for-wasm = { git = "https://github.com/dfinity/ic", rev = "7f6e7df37690a4256066a6bc0a55c8eb595f7755" }
ic-crypto-sha2 = { git = "https://github.com/dfinity/ic", rev = "7f6e7df37690a4256066a6bc0a55c8eb595f7755" }
ic-ic00-types = { git = "https://github.com/dfinity/ic", rev = "7f6e7df37690a4256066a6bc0a55c8eb595f7755" }
ic-icrc1 = { git = "https://github.com/dfinity/ic", rev = "7f6e7df37690a4256066a6bc0a55c8eb595f7755" }
ic-metrics-encoder = "1"
ic-stable-structures = { workspace = true }
ic-utils-ensure = { git = "https://github.com/dfinity/ic", rev = "7f6e7df37690a4256066a6bc0a55c8eb595f7755" }
lazy_static = "1.4.0"
minicbor = { workspace = true }
minicbor-derive = { workspace = true }
num-traits = "0.2.14"
ripemd = "0.1.1"
scopeguard = "1.1.0"
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
omnity_types = { path = "../../types" }

[dev-dependencies]
rand = "0.7.3"
assert_matches = "1.5.0"
bitcoin = "0.28.1"
candid_parser = { workspace = true }
ic-config = { git = "https://github.com/dfinity/ic", rev = "7f6e7df37690a4256066a6bc0a55c8eb595f7755" }
ic-state-machine-tests = { git = "https://github.com/dfinity/ic", rev = "7f6e7df37690a4256066a6bc0a55c8eb595f7755" }
ic-test-utilities-load-wasm = { git = "https://github.com/dfinity/ic", rev = "7f6e7df37690a4256066a6bc0a55c8eb595f7755" }
ic-bitcoin-canister-mock = { path = "../../mock/bitcoin" }
proptest = "1.0"
simple_asn1 = { workspace = true }

[features]
self_check = []
