[package]
name = "brc20_customs"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.53"
bech32 = "0.9.0"
bs58 = "0.4.0"
bitcoin = { version = "0.31", features = ["rand", "serde"] }
candid = { workspace = true }
ciborium = { workspace = true }
hex = "0.4.3"
ic0 = "0.18.9"
ic-base-types = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
ic-btc-interface = { workspace = true }
ic-canisters-http-types = { git = "https://github.com/dfinity/ic", tag = "release-2024-03-06_23-01+p2p" }
ic-canister-log = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = "0.6"
ic-crypto-extended-bip32 = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
ic-crypto-getrandom-for-wasm = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
ic-crypto-sha2 = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
ic-ic00-types = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
ic-icrc1 = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
ic-metrics-encoder = "1"
ic-stable-structures = { workspace = true }
ic-utils-ensure = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
lazy_static = "1.4.0"
minicbor = { workspace = true }
minicbor-derive = { workspace = true }
num-traits = "0.2.14"
ripemd = "0.1.1"
scopeguard = "1.1.0"
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
omnity_types = { path = "../../types" }
thiserror = "1.0.63"
rand = "0.8.5"
serde_with = { version = "3", default-features = false, features = ["macros"] }
anyhow = "1"
getrandom = "0.2.15"
k256 = { git = "https://github.com/altkdf/elliptic-curves", branch = "schnorr_canister", features = ["schnorr"] }
rust_decimal = {workspace = true }
rust_decimal_macros = {workspace = true}