[package]
name = "doge_customs"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# async-trait = "0.1.53"
bech32 = "0.9.0"
bs58 = "0.4.0"
bitcoin = { version = "=0.32.2", default-features = false, features = [
  "std",
  "secp-lowmemory",
] }
# bitcoin = { version = "=0.32.2", features = ["rand", "serde", "std", "secp-lowmemory"] }
bitcoin-io = "=0.1.2"
# candid = { workspace = true }
candid = { version = "0.10" }
# ciborium = { workspace = true }
ciborium = "0.2.1"
hex = { package = "hex-conservative", version = "0.2", default-features = false, features = [
  "alloc",
] }
ic0 = "0.18.9"
base64 = "0.22.1"
ic-base-types = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
# ic-btc-interface = { workspace = true }
ic-canisters-http-types = { git = "https://github.com/dfinity/ic", tag = "release-2024-03-06_23-01+p2p" }
ic-canister-log = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
# ic-cdk = { workspace = true }
# ic-cdk-macros = { workspace = true }
ic-cdk = "0.12.2"
ic-cdk-macros = "0.8.3"
ic-cdk-timers = "0.6"
ic-crypto-extended-bip32 = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
ic-crypto-getrandom-for-wasm = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
ic-crypto-sha2 = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
ic-ic00-types = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
ic-icrc1 = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
ic-metrics-encoder = "1"
# ic-stable-structures = { workspace = true }
ic-stable-structures = "0.6.5"
ic-utils-ensure = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
lazy_static = "1.4.0"
# minicbor = { workspace = true }
# minicbor-derive = { workspace = true }
minicbor = { version = "0.19.1", features = ["alloc", "derive"] }
minicbor-derive = "0.13.0"
num-traits = "0.2.14"
ripemd = "0.1.1"
scopeguard = "1.1.0"
# serde = { workspace = true }
# serde_bytes = { workspace = true }
# serde_json = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = { version = "1", features = ["std"] }
# omnity_types = { path = "../../types" }
omnity_types = { git = "https://github.com/octopus-network/omnity-interoperability.git", rev = "9e851c7a1a37a997fb9ee09865fb2e54fd4e79ed"}
thiserror = "1.0.63"
rand = "0.8.5"
serde_with = { version = "3", default-features = false, features = ["macros"] }
anyhow = "1"
getrandom = "0.2.15"
k256 = { git = "https://github.com/altkdf/elliptic-curves", branch = "schnorr_canister", features = ["schnorr"] }
# rust_decimal = {workspace = true }
# rust_decimal_macros = {workspace = true}
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
log = "0.4.22"
bincode = "1.3.3"
futures = "0.3.30"

scrypt = { version = "0.11", default-features = false, features = ["simple"] }
url = "2.5.4"
