[package]
name = "icp_customs"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "icp_customs"
path = "src/main.rs"

[dependencies]
candid = { workspace = true }
ciborium = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = "0.6"
log = { workspace = true }
num-traits = "0.2.17"
serde = { workspace = true }
omnity_types = { path = "../../types" }

icrc-ledger-client-cdk = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
icrc-ledger-types = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
ic-ledger-types = { workspace = true }
ic-canister-log = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
ic-stable-structures = "0.6"
ic-canisters-http-types = { git = "https://github.com/dfinity/ic", tag = "release-2024-03-06_23-01+p2p" }