[package]
name = "runes_oracle"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
ic-btc-interface = { workspace = true }
ic-agent = "0.33.0"
bitcoin_customs = { path = "../bitcoin" }
reqwest = { version = "0.11", features = ["blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
log = "0.4.20"
env_logger = "0.11.2"
tokio = { version = "1", features = ["full"] }
ticker = "0.1.1"
bitcoin = { version = "0.30.1", features = ["rand", "serde"] }
clap = { version = "4.5.3", features = ["derive", "env"] }
