[package]
name = "solana_customs"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
borsh = "1.5.5"
borsh-derive = "1.5.5"
candid = { version = "0.10" }
ciborium = "0.2.1"
ic-cdk = "0.17.1"
serde = "1"
serde_json = "^1.0.117"
serde_bytes = "^0.11.14"
ic-cdk-timers = "0.6"
ic-stable-structures = "0.6"
thiserror = "1"
anyhow = "1.0.86"
strum_macros = "0.25.3"
strum = { version = "0.25.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
bs58 = "0.5.1"
futures = "0.3.30"
ic-canister-log = "0.2"
ic-canisters-http-types = { git = "https://github.com/dfinity/ic", package = "ic-canisters-http-types" }
ic-solana = { git = "https://github.com/octopus-network/ic-solana/", package = "ic-solana", branch = "feature/support_solana_customs"}

[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 's'
