[package]
name = "ic-bitcoin-canister-mock"
version = "0.1.0"
edition.workspace = true

[dependencies]
bech32 = "0.9.0"
candid = { workspace = true }
ic-btc-interface = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
rand = "0.8.5"
serde = { workspace = true }
serde_bytes = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }
