[package]
name = "cosmwasm_proxy"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
lto = true
opt-level = 'z'

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
candid_parser = { workspace = true }
ciborium = { workspace = true }
ic-btc-interface = { git = "https://github.com/dfinity/bitcoin-canister", rev = "9b239d1d67253eb14a35be6061e3967d5ec9db9d" }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-ledger-types = { workspace = true }
icrc-ledger-client-cdk = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
icrc-ledger-types = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
ic-stable-structures = { workspace = true }

serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }

thiserror = "1"
log = "0.4"

subtle-encoding = { version = "0.5", features = ["bech32-preview"] }
