[package]
name = "ethereum_common"
version = "0.1.0"
edition.workspace = true


[dependencies]
candid = { workspace = true }
ciborium = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-ledger-types = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
ic-stable-structures = { workspace = true }
serde_bytes = "0.11"
hex = "0.4"
eyre = "0.6.8"
humantime = "2.1"
ic-cdk-timers = "=0.6.0"
ic-canisters-http-types = { git = "https://github.com/dfinity/ic", tag = "release-2024-03-06_23-01+p2p" }
tiny-keccak = { version = "2.0.2", features = ["keccak"], default-features = false }
num-traits = { version = "0.2", default-features = false }
bytes = { version = "1.10.1", default-features = false }
serde_derive = "^1.0"
k256 = "0.13"
evm_rpc_types = {path = "../../../evm-rpc-canister/evm_rpc_types" }
candid_derive = "0.6.6"
cketh-common = { git = "https://github.com/dfinity/ic", tag = "release-2024-03-06_23-01+p2p", package = "ic-cketh-minter" }
scopeguard = "1.2.0"
time = "0.3.36"
ic-canister-log = { git = "https://github.com/dfinity/ic", tag = "release-2024-03-06_23-01+p2p" }
ethers-core = "2.0.11"
itertools = "0.12.1"
omnity_types = { path = "../../types" }
sha2 = "0.10.8"
ethers-contract = "2.0.14"
ethers-providers = "2.0.14"
futures = "0.3"
const-hex = "1.14.0"
tree_hash = { git = "https://github.com/octopus-network/ethereum-lightclient-canister", package = "tree_hash"}